@@ -176,7 +176,7 @@ if (isset($name))
 	$head .= " - ".$name;
 
 // Header
-$tab = get_parameter("tab", "");
+$tab = get_parameter("tab", ""); 
 switch ($tab){
 	case "main": 
 		ui_print_page_header ($head, "", false, "graph_builder", true, $buttons);
@@ -187,8 +187,10 @@ switch ($tab){
 	case "preview":
 		ui_print_page_header ($head, "", false, "graph_view", true, $buttons);
                 break;
+	default:
+                ui_print_page_header ($head, "", false, "graph_builder", true, $buttons);
+                break;
 }
-
 
 if($add_graph)
 	ui_print_result_message($id_graph, __('Graph stored successfully'), __('There was a problem storing Graph'));
